load("//bazel:api.bzl", "mojo_test")

package(default_visibility = ["//max:consumers"])

_DEPS = [
    "//max:internal_utils",
    "//max:linalg",
    "//max:quantization",
    "@mojo//:std",
]

_FP8_FP4_TESTS = [
    "test_scaled_matmul.mojo",
    "test_scaled_matmul_pathological_bscale.mojo",
    "test_scaled_fp8_quantization.mojo",
    "test_scaled_nvfp4_quantization.mojo",
    "test_nvfp4_block_scales_interleave.mojo",
    "test_scaled_mxfp8_quantization.mojo",
    "test_scaled_nvfp4_quantization_async.mojo",
    "test_nvfp4_quantization_near_zero.mojo",
    "test_grouped_nvfp4_quantization.mojo",
]

_EXTRA_CONSTRAINTS = {
    "test_scaled_matmul.mojo": select({
        "//:h100_gpu": ["//:h100_gpu"],
        "//:b200_gpu": ["//:b200_gpu"],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    "test_scaled_matmul_pathological_bscale.mojo": select({
        "//:h100_gpu": ["//:h100_gpu"],
        "//:b200_gpu": ["//:b200_gpu"],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    "test_scaled_fp8_quantization.mojo": select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    "test_scaled_nvfp4_quantization.mojo": select({
        "//:b200_gpu": ["//:b200_gpu"],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    "test_nvfp4_block_scales_interleave.mojo": select({
        "//:b200_gpu": ["//:b200_gpu"],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    "test_scaled_mxfp8_quantization.mojo": select({
        "//:b200_gpu": ["//:b200_gpu"],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    "test_scaled_nvfp4_quantization_async.mojo": select({
        "//:b200_gpu": ["//:b200_gpu"],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    "test_nvfp4_quantization_near_zero.mojo": select({
        "//:b200_gpu": ["//:b200_gpu"],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    "test_grouped_nvfp4_quantization.mojo": select({
        "//:b200_gpu": ["//:b200_gpu"],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
}

[
    mojo_test(
        name = src + ".test",
        srcs = [src],
        exec_properties = {
            "test.resources:gpu-memory": "3",
        },
        tags = ["gpu"],
        target_compatible_with = ["//:has_gpu"] + _EXTRA_CONSTRAINTS.get(src, []),
        deps = _DEPS,
    )
    for src in _FP8_FP4_TESTS
]

[
    mojo_test(
        name = src + ".test",
        srcs = [src],
        tags = ["gpu"],
        target_compatible_with = ["//:has_gpu"],
        deps = _DEPS,
    )
    for src in glob(
        ["**/*.mojo"],
        exclude = [
            "test_multistage_gemm_q.mojo",
            "test_nvfp4_repack_e2e.mojo",
            "test_nvfp4_tune.mojo",
            "test_nvfp4_tune_real.mojo",
            "test_nvfp4_cold_gemm.mojo",
        ] + _FP8_FP4_TESTS,
    )
]

# COLD-WEIGHT microbench: round-robins a POOL of distinct weight buffers so
# weights are read from HBM (L2 evicted between reuses), unlike the L2-warm
# bench. The pool of P distinct gemma4-sized weights needs a large GPU memory
# budget (per-shape pool can exceed 1 GB for the 21504-wide shapes).
mojo_test(
    name = "test_nvfp4_cold_gemm.mojo.test",
    srcs = ["test_nvfp4_cold_gemm.mojo"],
    exec_properties = {
        "test.resources:gpu-memory": "10",
    },
    tags = ["gpu"],
    target_compatible_with = ["//:has_gpu"],
    deps = _DEPS,
)

# Runs an independent CPU/GPU dequant reference and the skeleton kernel on
# several gemma4-sized shapes (incl. 15360-wide), so it needs a larger GPU
# memory budget than the default glob rule provides.
mojo_test(
    name = "test_nvfp4_repack_e2e.mojo.test",
    srcs = ["test_nvfp4_repack_e2e.mojo"],
    exec_properties = {
        "test.resources:gpu-memory": "6",
    },
    tags = ["gpu"],
    target_compatible_with = ["//:has_gpu"],
    deps = _DEPS,
)

# CONFIG-SWEEP microbench: builds dense ref + repack and sweeps a list of
# MatmulConfigs per gemma4 shape. Needs the same larger budget as repack_e2e.
mojo_test(
    name = "test_nvfp4_tune.mojo.test",
    srcs = ["test_nvfp4_tune.mojo"],
    exec_properties = {
        "test.resources:gpu-memory": "6",
    },
    tags = ["gpu"],
    target_compatible_with = ["//:has_gpu"],
    deps = _DEPS,
)

# REAL gemma4-31B decode-shape bake-off: bespoke nvfp4_gemm baseline vs. a
# skeleton MatmulConfig sweep. Builds a dense ref B for the 21504-wide shapes
# so it needs a larger GPU memory budget than the default glob rule.
mojo_test(
    name = "test_nvfp4_tune_real.mojo.test",
    srcs = ["test_nvfp4_tune_real.mojo"],
    exec_properties = {
        "test.resources:gpu-memory": "8",
    },
    tags = ["gpu"],
    target_compatible_with = ["//:has_gpu"],
    deps = _DEPS,
)

mojo_test(
    name = "test_multistage_gemm_q.mojo.test",
    srcs = ["test_multistage_gemm_q.mojo"],
    # KERN-2339: Bounds check reveals vectorized store bug: n=0, width=4 but valid range is [0, 2]
    enable_assertions = False,
    exec_properties = {
        "test.resources:gpu-memory": "3",
    },
    tags = ["gpu"],
    # FIXME: KERN-1377 and move this into the glob above
    target_compatible_with = ["//:nvidia_gpu"],
    deps = _DEPS,
)
