load("//bazel:api.bzl", "mojo_test")

package(default_visibility = ["//max:consumers"])

[
    mojo_test(
        name = src + ".test",
        srcs = [src],
        deps = [
            "//max:internal_utils",
            "//max/kernels/src/state_space/nn",
            "@mojo//:std",
        ],
    )
    for src in glob(["**/*.mojo"])
]
