load("//bazel:api.bzl", "modular_py_library", "requirement")

package(default_visibility = ["//max:consumers"])

modular_py_library(
    name = "benchmark_shared",
    srcs = glob(["**/*.py"]),
    data = glob(["datasets/packaged_data/**/*"]) + [
        "//max/python/max/benchmark:benchmark_config_yaml_files",
    ],
    deps = [
        "//max/python/max/config",
        "//max/python/max/diagnostics",
        "//max/python/max/serve:config",
        requirement("aiohttp"),
        requirement("datasets"),
        requirement("huggingface-hub"),
        requirement("msgspec"),
        requirement("numpy"),
        requirement("openai"),
        requirement("pillow"),
        requirement("prometheus-client"),
        requirement("pydantic"),
        requirement("pyyaml"),
        requirement("requests"),
        requirement("taskgroup"),
        requirement("tqdm"),
        requirement("transformers"),
        requirement("typing-extensions"),
    ],
)
